# api/swagger/swagger.yaml
@@ -12,19 +12,112 @@ x-google-endpoints:
 #- name: 'localhost:10010'
   allowCors: 'true'
 # basePath prefixes all resource paths
-basePath: /
+basePath: /api
 # 
 schemes:
   # tip: remove http to make production-grade
   - http
   - https
 # format of bodies a client can send (Content-Type)
+securityDefinitions:
+  Bearer:
+    type: apiKey
+    name: Authorization
+    in: header
+    description: |
+     For accessing the API a valid JWT token must be passed in all the queries in
+     the 'Authorization' header.
+  
+  
+     A valid JWT token is generated by the API and retourned as answer of a call
+     to the route /login giving a valid user & password.
+  
+  
+     The following syntax must be used in the 'Authorization' header :
+  
+         Bearer xxxxxx.yyyyyyy.zzzzzz
+
 consumes:
   - application/json
 # format of the responses to the client (Accepts)
 produces:
   - application/json
 paths:
+
+  /login/{role}:
+    x-swagger-router-controller: main-controller
+    post:
+      operationId: loginPost
+      description: "Login with a particular role"
+      parameters:
+        - name: role
+          in: path
+          required: true
+          type: string
+        - name: authentication
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Authentication"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Token"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
+
+  /unprotected:
+    x-swagger-router-controller: main-controller
+    get:
+      operationId: unprotectedGet
+      description: "Unprotected endpoint"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Resource"
+
+  /protected:
+    x-swagger-router-controller: main-controller
+    get:
+      operationId: protectedGet
+      description: "Protected endpoint, only accessible to 'admins' and 'users'"
+      security:
+        - Bearer: []
+      x-security-scopes:
+        - admin
+        - user
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Resource"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
+
+  /protected2:
+    x-swagger-router-controller: main-controller
+    get:
+      operationId: protected2Get
+      description: "Protected endpoint, only accessible to 'admins'"
+      security:
+        - Bearer: []
+      x-security-scopes:
+        - admin
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Resource"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
 
   /usuarios:
     x-swagger-router-controller: usuario.controller
@@ -1120,6 +1213,34 @@ definitions:
       - success
       - description
   
+  Authentication:
+    type: object
+    properties:
+      username:
+        type: string
+        example: "username"
+      password:
+        type: string
+        example: "password"
+
+  Resource:
+    type: object
+    properties:
+      resource:
+        type: string
+
+  Token:
+    type: object
+    properties:
+      token:
+        type: string
+        
+  Error:
+    type: object
+    properties:
+      message:
+        type: string
+        
   ErrorResponse:
     required:
       - message
